--- a/src/FubuMVC.Diagnostics.Tests/packages.config
+++ b/src/FubuMVC.Diagnostics.Tests/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Bottles" version="0.9.1.321" />
+  <package id="Bottles" version="0.9.1.327" />
   <package id="DotNetZip" version="1.9.1.8" />
-  <package id="FubuCore" version="0.9.9.169" />
-  <package id="FubuTestingSupport" version="0.9.9.169" />
-  <package id="HtmlTags" version="1.1.0.90" />
+  <package id="FubuCore" version="0.9.9.172" />
+  <package id="FubuLocalization" version="0.9.5.70" />
+  <package id="FubuMVC.References" version="0.9.8.1080" />
+  <package id="FubuTestingSupport" version="0.9.9.172" />
+  <package id="HtmlTags" version="1.1.0.94" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="RhinoMocks" version="3.6.1" />
   <package id="structuremap" version="2.6.3" />
