moved up versions of Bottles and FubuMVC to beat the [FubuModule] linking problem

--- a/ripple.config
+++ b/ripple.config
@@ -7,5 +7,6 @@
   <FastBuildCommand>rake compile</FastBuildCommand>
   <Floats>
     <string>FubuMVC.References</string>
+    <string>Bottles</string>
   </Floats>
 </ripple>
