CSS blows, but the chrome and navigation is working finally

--- a/ripple.config
+++ b/ripple.config
@@ -8,5 +8,12 @@
   <Floats>
     <string>FubuMVC.References</string>
     <string>Bottles</string>
+    <string>FubuCore</string>
+    <string>FubuLocalization</string>
+    <string>FubuMVC.JQueryUI</string>
+    <string>FubuMVC.SlickGrid</string>
+    <string>FubuMVC.Spark</string>
+    <string>FubuMVC.TwitterBootstrap</string>
+    <string>FubuTestingSupport</string>
   </Floats>
 </ripple>
