--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -89,7 +89,7 @@
   <ItemGroup>
     <Compile Include="DiagnosticsExtensionTester.cs" />
     <Compile Include="InteractionContextExtensions.cs" />
-    <Compile Include="New\Routes\RouteReportTester.cs" />
+    <Compile Include="Routes\RouteReportTester.cs" />
     <Compile Include="Runtime\ApplyTracingIntegrationTesting.cs" />
     <Compile Include="Runtime\BehaviorTracerNodeTester.cs" />
     <Compile Include="Runtime\BehaviorTracerTester.cs" />
@@ -101,19 +101,8 @@
     <Compile Include="Runtime\DiagnosticsRegistryTester.cs" />
     <Compile Include="Runtime\DiagnosticsSettingsTester.cs" />
     <Compile Include="Runtime\RequestHistoryCacheTester.cs" />
-    <Compile Include="Runtime\TimedReportTester.cs" />
     <Compile Include="Runtime\Tracing\DiagnosticBehaviorTester.cs" />
-    <Compile Include="Features\Html\Decorators\DisplayPathBuilderTester.cs" />
-    <Compile Include="Features\Html\Decorators\PropertyExamplesBuilderTester.cs" />
-    <Compile Include="Features\Html\Decorators\PropertyLinksBuilderTester.cs" />
-    <Compile Include="Features\Html\HtmlConventionsPreviewContextFactoryTester.cs" />
-    <Compile Include="Features\Html\HtmlConventionsPreviewContextTester.cs" />
-    <Compile Include="Features\Html\PreviewModelActivatorTester.cs" />
-    <Compile Include="Features\Html\PreviewModelTypeResolverTester.cs" />
-    <Compile Include="Features\Html\SampleContextModel.cs" />
-    <Compile Include="Features\Html\when_previewing_html_conventions.cs" />
     <Compile Include="Models\SampleGridModel.cs" />
-    <Compile Include="ObjectMother.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shared\Tags\DetailTableBuilderTester.cs" />
     <Compile Include="TODOS.cs" />
