reshaping DebugReport to newer RequestLog scheme.  Implemented RequestTrace

--- a/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
+++ b/src/FubuMVC.Diagnostics/FubuMVC.Diagnostics.csproj
@@ -174,6 +174,10 @@
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Chains\ChainEndpoint.cs" />
     <Compile Include="DiagnosticsChromeExtension.cs" />
+    <Compile Include="Requests\HttpRequestVisualization.cs" />
+    <Compile Include="Requests\RequestVisualizationEndpoint.cs" />
+    <Compile Include="Runtime\RequestTraceListener.cs" />
+    <Compile Include="Runtime\Tracing\IRequestTrace.cs" />
     <Compile Include="Shared\TypeEndpoint.cs" />
     <Compile Include="Shared\Tags\DetailTableBuilder.cs" />
     <Compile Include="Chrome\DashboardChrome.cs" />
@@ -195,19 +199,17 @@
     <Compile Include="Runtime\BehaviorTracerNode.cs" />
     <Compile Include="Runtime\BindingHistory.cs" />
     <Compile Include="Runtime\DebugDetector.cs" />
-    <Compile Include="Runtime\DebugReport.cs" />
+    <Compile Include="Runtime\RequestLog.cs" />
     <Compile Include="Runtime\DiagnosticNode.cs" />
     <Compile Include="DiagnosticsRegistration.cs" />
     <Compile Include="Runtime\FubuDiagnosticsAttribute.cs" />
     <Compile Include="Runtime\IDebugDetector.cs" />
-    <Compile Include="Runtime\IDebugReport.cs" />
     <Compile Include="Runtime\IRequestHistoryCache.cs" />
     <Compile Include="Runtime\RequestHistoryCache.cs" />
     <Compile Include="Runtime\Tracing\BehaviorCorrelation.cs" />
     <Compile Include="Runtime\Tracing\BehaviorTracer.cs" />
     <Compile Include="Runtime\Tracing\DiagnosticBehavior.cs" />
     <Compile Include="Runtime\Tracing\DiagnosticUrlPolicy.cs" />
-    <Compile Include="Runtime\Tracing\RecordingAuthorizationPolicyExecutor.cs" />
     <Compile Include="Chains\ChainRequest.cs" />
     <Compile Include="Dashboard\DashboardModel.cs" />
     <Compile Include="Dashboard\DashboardRequestModel.cs" />
