--- a/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
+++ b/src/FubuMVC.Diagnostics.Tests/FubuMVC.Diagnostics.Tests.csproj
@@ -101,9 +101,12 @@
     <Compile Include="Runtime\DiagnosticsRegistryTester.cs" />
     <Compile Include="Runtime\DiagnosticsSettingsTester.cs" />
     <Compile Include="Runtime\RequestHistoryCacheTester.cs" />
+    <Compile Include="Runtime\RequestStepTester.cs" />
+    <Compile Include="Runtime\Tracing\RequestTraceListenerTester.cs" />
     <Compile Include="Runtime\Tracing\DiagnosticBehaviorTester.cs" />
     <Compile Include="Models\SampleGridModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runtime\Tracing\RequestTraceTester.cs" />
     <Compile Include="Shared\Tags\DetailTableBuilderTester.cs" />
     <Compile Include="TODOS.cs" />
   </ItemGroup>
