--- a/src/FubuMVC.Diagnostics.Tests/packages.config
+++ b/src/FubuMVC.Diagnostics.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="FubuLocalization" version="0.9.5.72" />
   <package id="FubuMVC.JQueryUI" version="0.5.0.37" />
   <package id="FubuMVC.References" version="0.9.8.1107" />
+  <package id="FubuMVC.SlickGrid" version="0.0.0.38" />
   <package id="FubuTestingSupport" version="0.9.9.174" />
   <package id="HtmlTags" version="1.1.0.94" />
   <package id="NUnit" version="2.5.10.11092" />
